--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2695,6 +2695,23 @@
                 android:resource="@string/sound_dashboard_summary"/>
         </activity>
 
+        <activity
+            android:name=".Settings$ChiDashboardActivity"
+            android:label="@string/chi_dashboard_title"
+            android:icon="@drawable/ic_homepage_chi"
+            android:taskAffinity="com.android.settings"
+            android:parentActivityName="Settings">
+            <intent-filter android:priority="10">
+                <action android:name="com.android.settings.action.SETTINGS"/>
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.zen.chi.ChiDashboardFragment"/>
+            <meta-data android:name="com.android.settings.category"
+                    android:value="com.android.settings.category.ia.homepage"/>
+            <meta-data android:name="com.android.settings.summary"
+                android:resource="@string/chi_dashboard_summary" />
+        </activity>
+
         <!-- Show apps for which application-level notification settings are applicable -->
         <activity android:name="Settings$NotificationAppListActivity"
                   android:label="@string/app_notifications_title"
